k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastify-cpu-consumer
  namespace: fastify-test
spec:
  selector:
    app: fastify-cpu-consumer
  ports:
    - name: http
      port: 80
      targetPort: http
